large ai commit